style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/*END OF CSS RESET*/
/*BEGINNING OF CUSTOM CSS*/

.intro {
  font-family: 'Fjalla One', sans-serif;
  height: 100vh;
  position: relative;
}
/*.overlay:before{
  position: absolute;
  content:" ";
  top:0;
  left:0;
  width:100%;
  height:100%;
  display: block;
  background-color: rgba(125, 202, 92, 0.5);
  z-index: 99;
}*/
/*FIRST SECTION*/
.intro {
  /*background-image: url('downtown.jpg');*/
	background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  overflow: hidden;
  position: relative;
  z-index: -1;
}
.blurImg {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -99;
    top: 0;
    left: 0;
}
.blurImg > div {
    position: fixed;
    width: 100%;
    height: 100vh;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
}
.clear {
	overflow: hidden;
	position: fixed;

}
.blur {
	overflow: hidden;
	position: relative;
    opacity: 0;
    filter: alpha(opacity=0);
}
.overlay:before{
  position: absolute;
  content:" ";
  top:0;
  left:0;
  width:100%;
  height:100%;
  display: block;
  background-color: rgba(125, 202, 92, 0.5);
  z-index: 99;
}
.l1 {
  border-bottom: 2px solid #FFF;
  color: #FFF;
  font-size: 2em;
  margin: 5% 10%;
  padding: 2%;
  text-align: left;
	text-shadow: 5px 5px 4px rgba(0, 0, 0, 0.3);
  z-index: 99;
}
.app-store {
	background: rgba(255, 255, 255, .9);
	color: rgba(125, 202, 92, 0.9);
  border-radius: 4px;
  float: right;
  font-size: .5em;
  margin-left: 1%;
  padding: 1%;
	text-shadow: none;
}
.logo{
	width: 50%;
	text-align: center;
	padding: 8% 0;
	margin: 0 auto;
	display: block;
}
/*.l2 {
  color: #FFF;
  padding-top: 5%;
  text-align: center;
  font-size: 10em;
}*/

/*SECOND SLIDE*/
.NEW-BACKGROUND {
	background: #FFF;
}
.slide-2, {
	background: #FFF;
  font-family: 'Raleway', sans-serif;
  height: 20vh;
  color: #FFF;
  margin: auto 10%;
	z-index: 99;
}
.future {
  font-size: 3em;
  line-height: 1.25;
  padding: 10%;
  text-align: left;
}
/*THIRD SLIDE*/
.slide-3 {
  background-color: rgba(125, 202, 92, 0.5);
	height: 100vh;
	text-align: center;
	font-family: 'Fjalla One', sans-serif;
  height: 100vh;
  position: relative;
}
.slide-3-left {
  border-top: 1px solid #FFF;
	border-bottom: 1px solid #FFF;
	color: #000;
  font-size: 2em;
  line-height: 2;
  margin: 5%;
	margin-left: 10%;
  padding: 2%;
  float: left;
  width: 25%;
}
.slide-3-right {
	/*border: 1px solid black;*/
	float: left;
  width: 55%;
}
.slide-3-right img {
	margin: 8% auto;
	padding: 2px;
	text-align: center;
}
/*.influencer img {
	margin: 20%
	padding: 2px;
	text-align: center;
	background: rgba(125, 202, 92, 0.6);
	border-radius: 50px;
	float: right;
	width: 10%;
}*/
.slide-4 {
  background-color: rgba(125, 202, 92, 0.6);
  font-family: 'Raleway', sans-serif;
  height: 20vh;
  color: #999;
  position: relativ;
  width: 100%;
}
.line {
  padding: 4%;
}
.last-line {
  border-top: 1px solid #FFF;
  color: #FFF;
  margin: 0 10%;
  padding: 1%;
  position: relative;
  /*text-align: left;*/
}
.app-store-2 {
  border: 1px solid #FFF;
  border-radius: 6px;
  float: right;
  font-size: .5em;
  margin-left: 1%;
  padding: 1%;
}

/*.explaination-l2 {
  font-size: 3em;
  margin-top: -4%;
  text-align: right;
}*/
/*SECOND SLIDE*/

/*.definition-section {
  float: left;
}*/
/*.definition {
  border: 8px dotted black;
  float: left;
  font-size: 2em;
  line-height: 1.5;
  padding: 3%;
  width: 375px;
}*/
/*.follow-up {
  border: 8px solid black;
  background: #000;
  color: white;
  font-size: 1.5em;
  line-height: 1.5;
  padding: 3%;
  width: 375px;
}
.influencer {
  margin-top: 4%;
  margin-right: 15%;
  float: right;
  width: 300px;
}
.influencer img {
  width: 600px;
}
.slide-3 {
  margin-top: 20%;
}
.phone img {
  float: left;
  width: 300px;
}
.how-it-works {
  margin-left: 20px;
}
.title {
  font-size: 2em;
}
.pointer {
    width: 500px;
    height: 100px;
    position: relative;
    background: lightgray;
    float: left;
    margin-bottom: 2%;
  }
  .pointer:after {
    content: "";
    position: absolute;
    right: 0;
    bottom: 0;
    width: 0;
    height: 0;
    border-right: 50px solid white;
    border-top: 50px solid transparent;
    border-bottom: 50px solid transparent;
  }
  .pointer:before {
    content: "";
    position: absolute;
    left: -50px;
    bottom: 0;
    width: 0;
    height: 0;
    border-right: 50px solid lightgray;
    border-top: 50px solid transparent;
    border-bottom: 50px solid transparent;
  }
.pointer p{
  font-size: 1.25em;
  margin-left: 3%;
  width: 400px;
}*/

/*.pointer {
  margin-left: 3%;
  padding: 3%;
  text-align: left;
  width: 400px;
}*/
/*.pointer-1l p{
  padding: 4%;
}
.pointer-2l p {
  padding: 3%;
}*/
/*.pointer-3l p {
  padding-bottom: 3%;
}*/
/*.slide-4 img {
  text-align: center;
}
.slide-4 img{
  margin: 40%;
  width: 200px;
}*/

